# tpm2simulator

./: Dockerfile  LICENSE  README.md
cmake/: CMakeLists.txt  toolchain_arm.cmake
cmake/OsslCryptoEngine/: CMakeLists.txt
cmake/patches/: CMakeLists.txt
cmake/platform/: CMakeLists.txt
cmake/tpm/: CMakeLists.txt
documents/116/: TPM Rev 2.0 Part 1 - Architecture 01.16.txt  TPM Rev 2.0 Part 2 - Structures 01.16.txt  TPM Rev 2.0 Part 2 - Structures 01.16.txt.patch  TPM Rev 2.0 Part 3 - Commands 01.16-code.txt  TPM Rev 2.0 Part 4 - Supporting Routines 01.16-code.txt  TPM Rev 2.0 Part 4 - Supporting Routines 01.16-code.txt.patch
documents/138/: TPM Rev 2.0 Part 1 - Architecture 01.38.txt  TPM Rev 2.0 Part 2 - Structures 01.38.txt  TPM Rev 2.0 Part 3 - Commands 01.38-code.txt  TPM Rev 2.0 Part 4 - Supporting Routines 01.38-code.txt
lib/: OpenSSL Copyright.txt
lib/arm/: README
patches/116/: CpriRSA.c.patch  CryptoEngine.h.patch  Entropy.c.patch  LocalityPlat.c.patch  NVMem.c.patch  NV_UndefineSpaceSpecial.c.patch  OsslCryptoEngine.h.patch  SessionProcess.c.patch  SessionProcess_fp.h.patch  TPMCmdp.c.patch  TPMCmds.c.patch  TcpServer.c.patch  TpmBuildSwitches.h.patch
patches/138/: CreateLoaded.c.patch  CryptSym.c.patch  Global.h.patch  Implementation.h.patch  Manufacture.c.patch  Platform_fp.h.patch  Simulator_fp.h.patch  TPMB.h.patch  TPMCmdp.c.patch  TPMCmds.c.patch  TPM_Types.h.patch  TcpServer.c.patch  TpmTcpProtocol.h.patch
scripts/: README  main.py  settings.py
scripts/modules/: comment.py  constants.py  data_structures.py  file_handling.py  utils.py
scripts/modules/extractors/: commands_extractor.py  license_extractor.py  spt_routines_extractor.py  table_extractor.py
scripts/modules/extractors/fodt/: tpm2_part3_commands_fodt.py  tpm2_part4_spt_routines_annex_fodt.py  tpm2_part4_spt_routines_fodt.py  tpm2_part4_spt_routines_header_files_fodt.py  tpm2_partx_extraction_navigator_fodt.py  tpm2_partx_license_extractor_fodt.py  tpm2_partx_table_extractor_fodt.py
scripts/modules/extractors/pdf/: tpm2_part3_commands_pdf.py  tpm2_part4_spt_routines_annex_pdf.py  tpm2_part4_spt_routines_header_files_pdf.py  tpm2_part4_spt_routines_pdf.py  tpm2_partx_extraction_navigator_pdf.py  tpm2_partx_license_extractor_pdf.py  tpm2_partx_table_extractor_pdf.py
scripts/modules/part2_structures/: tpm2_part2_structures.py  tpm2_part2_structures_alg_ids.py  tpm2_part2_structures_types.py
scripts/modules/part2_structures/marshal/: tpm2_partx_marshal.py  tpm2_partx_marshal_advanced_type.py  tpm2_partx_marshal_array.py  tpm2_partx_marshal_bits_table.py  tpm2_partx_marshal_interface_table.py  tpm2_partx_marshal_simple_type.py  tpm2_partx_marshal_structure_table.py  tpm2_partx_marshal_templates.py  tpm2_partx_marshal_union_table.py  tpm2_partx_type_mapping.py
scripts/modules/part3_commands/: tpm2_part3_command_attributes_h.py  tpm2_part3_command_dispatcher.py  tpm2_part3_command_dispatcher_templates.py  tpm2_part3_commands.py  tpm2_part3_commands_fp.py  tpm2_part3_commands_h.py  tpm2_part3_commands_prototypes.py  tpm2_part3_commands_prototypes_templates.py  tpm2_part3_handle_process.py  tpm2_part3_handle_process_templates.py
scripts/modules/part4_spt_routines/: tpm2_part4_spt_routines.py  tpm2_part4_spt_routines_annex.py  tpm2_part4_spt_routines_header_files.py  tpm2_part4_spt_routines_prototypes.py
scripts/modules/prototypes/: tpm2_partx_prototype_component.py  tpm2_partx_prototype_file.py  tpm2_partx_prototype_functions.py  tpm2_partx_prototype_modifiers.py
